--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    
+
     <h1 id="title">Survey</h1>
     <p id="description">This is a survey</p>
+
+    <form id="survey-form">
+      <input type="text" id="name" name="name" value="name"><br>
+    </form>
 
     <script  src="js/index.js"></script>
   </body>
