--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <div id="surveyContainer">
-    <h1 id="title">Survey</h1>
-    <p id="description">This is a survey</p>
+    <h1 id="title">Demographic Survey</h1>
+    <p id="description">This is a survey to collect demographic information.</p>
 
     <form id="survey-form">
       <label id="name-label" for="name"> Name </label>
@@ -18,7 +18,7 @@
       <label id="email-label" for="email"> Email </label>
       <input type="email" id="email" name="emailaddress" placeholder="What is your email?" required><br>
       <label id="number-label" for="birthyear"> Birthyear </label>
-      <input type="number" id="number" name="birthyear" min="1900" max="2019"><br>
+      <input type="number" id="number" name="birthyear" min="1900" max="2019" placeholder="19XX"><br>
       <label id="gender-label" for="gender"> Gender </label>
       <select name="dropdown" size="1" id="dropdown">
         <option value="Male">Male</option>
